fix bug systematic dataset

--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "# dataset\n",
-    "dataset = 'detailed'"
+    "dataset = 'systematic'"
    ]
   },
   {
@@ -73,7 +73,7 @@
     "    train_eval_df    = evaluation_df[evaluation_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] != test_fold]['sequenceID'])]\n",
     "    test_inputs_df   = inputs_df[inputs_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] == test_fold]['sequenceID'])]\n",
     "    test_eval_df     = evaluation_df[evaluation_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] == test_fold]['sequenceID'])]\n",
-    "    return train_inputs_df, train_outputs_df, train_eval_df, test_inputs_df, test_eval_df"
+    "    return train_inputs_df.sort_values(by='sequenceID'), train_outputs_df.sort_values(by='sequenceID'), train_eval_df, test_inputs_df, test_eval_df"
    ]
   },
   {
@@ -117,12 +117,12 @@
     "def get_trained_model(inputs_tensor, outputs_tensor, hidden_layers, hidden_size):\n",
     "    model = MLPModel(inputs_tensor.shape[1], hidden_layers, hidden_size)\n",
     "    criterion = SquaredHingeLoss()\n",
-    "    optimizer = optim.Adam(model.parameters(), 0.0001)\n",
+    "    optimizer = optim.Adam(model.parameters())\n",
     "    \n",
     "    best_loss = float('inf')\n",
     "    patience = 5000\n",
     "    wait = 0\n",
-    "    for epoch in range(100000):\n",
+    "    for epoch in range(50000):\n",
     "        loss = criterion(model(inputs_tensor), outputs_tensor)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
@@ -199,7 +199,7 @@
     "\n",
     "        # trained model\n",
     "        hidden_layers, hidden_size = chose_best_architect(cv_df, test_fold, len(chosen_features))\n",
-    "        trained_model = get_trained_model(train_input_tensor, outputs_tensor, hidden_layers, hidden_size)\n",
+    "        trained_model = get_trained_model(train_input_tensor, outputs_tensor, 2, 64)\n",
     "        \n",
     "        # get acc\n",
     "        with torch.no_grad():\n",
