--- a/MLP_cv.ipynb
+++ b/MLP_cv.ipynb
@@ -83,7 +83,7 @@
     "    # validation\n",
     "    val_inputs_df = inputs_df[inputs_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] == val_fold]['sequenceID'])]\n",
     "    val_eval_df = evaluation_df[evaluation_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] == val_fold]['sequenceID'])]\n",
-    "    return subtrain_inputs_df, subtrain_outputs_df, subtrain_eval_df, val_inputs_df, val_eval_df"
+    "    return subtrain_inputs_df.sort_values(by='sequenceID'), subtrain_outputs_df.sort_values(by='sequenceID'), subtrain_eval_df, val_inputs_df, val_eval_df"
    ]
   },
   {
