--- a/linear.ipynb
+++ b/linear.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "# dataset\n",
-    "dataset = 'detailed'"
+    "dataset = 'systematic'"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "    train_eval_df    = evaluation_df[evaluation_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] != test_fold]['sequenceID'])]\n",
     "    test_inputs_df   = inputs_df[inputs_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] == test_fold]['sequenceID'])]\n",
     "    test_eval_df     = evaluation_df[evaluation_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] == test_fold]['sequenceID'])]\n",
-    "    return train_inputs_df, train_outputs_df, train_eval_df, test_inputs_df, test_eval_df"
+    "    return train_inputs_df.sort_values(by='sequenceID'), train_outputs_df.sort_values(by='sequenceID'), train_eval_df, test_inputs_df, test_eval_df"
    ]
   },
   {
@@ -104,9 +104,9 @@
     "    optimizer = optim.Adam(model.parameters())\n",
     "    \n",
     "    best_loss = float('inf')\n",
-    "    patience = 2000\n",
+    "    patience = 500\n",
     "    wait = 0\n",
-    "    for epoch in range(100000):\n",
+    "    for epoch in range(10000):\n",
     "        loss = criterion(model(inputs_tensor), outputs_tensor)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
