--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -199,7 +199,7 @@
     "\n",
     "        # trained model\n",
     "        hidden_layers, hidden_size = chose_best_architect(cv_df, test_fold, len(chosen_features))\n",
-    "        trained_model = get_trained_model(train_input_tensor, outputs_tensor, 2, 64)\n",
+    "        trained_model = get_trained_model(train_input_tensor, outputs_tensor, hidden_layers, hidden_size)\n",
     "        \n",
     "        # get acc\n",
     "        with torch.no_grad():\n",
