--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -170,7 +170,7 @@
    "source": [
     "# main\n",
     "for test_fold in range(1, n_fold+1):\n",
-    "    for chosen_features, feature_engineer in zip([['length'], ['length', 'sd'], ['length', 'sd', 'range_value', 'sum_diff']],\n",
+    "    for chosen_features, feature_engineer in zip([['length'], ['length', 'variance'], ['length', 'variance', 'range_value', 'sum_diff']],\n",
     "                                                 [[loglog],   [loglog, log],       [loglog, log, log, log]]):\n",
     "        if(identity in feature_engineer):\n",
     "            is_engineer = 'no'\n",
