--- a/MLP_117_cv.ipynb
+++ b/MLP_117_cv.ipynb
@@ -20,10 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get common sequenceID\n",
-    "list1 = set(pd.read_csv(\"training_data/detailed/inputs.csv\")['sequenceID'])\n",
-    "list2 = set(pd.read_csv(\"training_data/systematic/inputs_old.csv\")['sequenceID'])\n",
-    "common_seqID_list = list1.intersection(list2)"
+    "# dataset\n",
+    "dataset = 'epigenomic'"
    ]
   },
   {
@@ -32,8 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataset\n",
-    "dataset = 'detailed'"
+    "# get dataframes\n",
+    "fold_split_df = pd.read_csv('training_data/' + dataset + '/folds.csv')\n",
+    "inputs_df     = pd.read_csv('training_data/' + dataset + '/inputs_old.csv')\n",
+    "outputs_df    = pd.read_csv('training_data/' + dataset + '/outputs.csv')\n",
+    "evaluation_df = pd.read_csv('training_data/' + dataset + '/evaluation.csv')"
    ]
   },
   {
@@ -42,17 +43,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get dataframes\n",
-    "fold_split_df = pd.read_csv('training_data/' + dataset + '/folds.csv')\n",
-    "inputs_df     = pd.read_csv('training_data/' + dataset + '/inputs_old.csv')\n",
-    "outputs_df    = pd.read_csv('training_data/' + dataset + '/outputs.csv')\n",
-    "evaluation_df = pd.read_csv('training_data/' + dataset + '/evaluation.csv')\n",
+    "# # get common sequenceID\n",
+    "# list1 = set(pd.read_csv(\"training_data/detailed/inputs.csv\")['sequenceID'])\n",
+    "# list2 = set(pd.read_csv(\"training_data/systematic/inputs_old.csv\")['sequenceID'])\n",
+    "# common_seqID_list = list1.intersection(list2)\n",
     "\n",
-    "# filter with common_seqID_list\n",
-    "fold_split_df = fold_split_df[fold_split_df['sequenceID'].isin(common_seqID_list)]\n",
-    "inputs_df     = inputs_df[inputs_df['sequenceID'].isin(common_seqID_list)]\n",
-    "outputs_df    = outputs_df[outputs_df['sequenceID'].isin(common_seqID_list)]\n",
-    "evaluation_df = evaluation_df[evaluation_df['sequenceID'].isin(common_seqID_list)]"
+    "# # filter with common_seqID_list\n",
+    "# fold_split_df = fold_split_df[fold_split_df['sequenceID'].isin(common_seqID_list)]\n",
+    "# inputs_df     = inputs_df[inputs_df['sequenceID'].isin(common_seqID_list)]\n",
+    "# outputs_df    = outputs_df[outputs_df['sequenceID'].isin(common_seqID_list)]\n",
+    "# evaluation_df = evaluation_df[evaluation_df['sequenceID'].isin(common_seqID_list)]"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
