--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "# dataset\n",
-    "dataset = 'systematic'"
+    "dataset = 'epigenomic'"
    ]
   },
   {
@@ -171,7 +171,7 @@
     "# main\n",
     "for test_fold in range(1, n_fold+1):\n",
     "    for chosen_features, feature_engineer in zip([['length'], ['length', 'variance'], ['length', 'variance', 'range_value', 'sum_diff']],\n",
-    "                                                 [[loglog],   [loglog, log],       [loglog, log, log, log]]):\n",
+    "                                                 [[loglog],   [loglog, log],       [loglog, log, log, loglog]]):\n",
     "        if(identity in feature_engineer):\n",
     "            is_engineer = 'no'\n",
     "        else:\n",
@@ -229,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
