--- a/MLP_117.ipynb
+++ b/MLP_117.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# dataset\n",
-    "dataset = 'detailed'"
+    "dataset = 'epigenomic'"
    ]
   },
   {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
