--- a/MLP_cv.ipynb
+++ b/MLP_cv.ipynb
@@ -153,7 +153,7 @@
     "# main\n",
     "for test_fold in range(1, n_fold+1):\n",
     "    for chosen_features, feature_engineer in zip([['length'], ['length', 'variance'], ['length', 'variance', 'range_value', 'sum_diff']],\n",
-    "                                                 [[loglog],   [loglog, log],          [loglog, log, log, log]]):\n",
+    "                                                 [[loglog],   [loglog, log],          [loglog, log, log, loglog]]):\n",
     "        for hidden_layers in [1, 2, 3]:\n",
     "            for hidden_size in [2, 4, 8, 16, 32, 64, 128, 256]:\n",
     "                # fold dataframe\n",
