--- a/linear.ipynb
+++ b/linear.ipynb
@@ -132,7 +132,7 @@
     "# main\n",
     "for test_fold in range(1, n_fold+1):\n",
     "    for chosen_features, feature_engineer in zip([['length'], ['length', 'variance'], ['length', 'variance', 'range_value', 'sum_diff']],\n",
-    "                                                 [[loglog],   [loglog,   log],  [loglog, log, log, log]]):\n",
+    "                                                 [[loglog],   [loglog,   log],  [loglog, log, log, loglog]]):\n",
     "        # fold dataframe\n",
     "        train_inputs_df, train_outputs_df, train_eval_df, test_inputs_df, test_eval_df = get_fold_dfs(test_fold, fold_split_df, inputs_df, outputs_df, evaluation_df)\n",
     "\n",
