--- a/MLP_117.ipynb
+++ b/MLP_117.ipynb
@@ -21,10 +21,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get common sequenceID\n",
-    "list1 = set(pd.read_csv(\"training_data/detailed/inputs.csv\")['sequenceID'])\n",
-    "list2 = set(pd.read_csv(\"training_data/systematic/inputs_old.csv\")['sequenceID'])\n",
-    "common_seqID_list = list1.intersection(list2)"
+    "# # get common sequenceID\n",
+    "# list1 = set(pd.read_csv(\"training_data/detailed/inputs.csv\")['sequenceID'])\n",
+    "# list2 = set(pd.read_csv(\"training_data/systematic/inputs_old.csv\")['sequenceID'])\n",
+    "# common_seqID_list = list1.intersection(list2)"
    ]
   },
   {
@@ -49,11 +49,11 @@
     "outputs_df    = pd.read_csv('training_data/' + dataset + '/outputs.csv')\n",
     "evaluation_df = pd.read_csv('training_data/' + dataset + '/evaluation.csv')\n",
     "\n",
-    "# filter with common_seqID_list\n",
-    "fold_split_df = fold_split_df[fold_split_df['sequenceID'].isin(common_seqID_list)]\n",
-    "inputs_df     = inputs_df[inputs_df['sequenceID'].isin(common_seqID_list)]\n",
-    "outputs_df    = outputs_df[outputs_df['sequenceID'].isin(common_seqID_list)]\n",
-    "evaluation_df = evaluation_df[evaluation_df['sequenceID'].isin(common_seqID_list)]"
+    "# # filter with common_seqID_list\n",
+    "# fold_split_df = fold_split_df[fold_split_df['sequenceID'].isin(common_seqID_list)]\n",
+    "# inputs_df     = inputs_df[inputs_df['sequenceID'].isin(common_seqID_list)]\n",
+    "# outputs_df    = outputs_df[outputs_df['sequenceID'].isin(common_seqID_list)]\n",
+    "# evaluation_df = evaluation_df[evaluation_df['sequenceID'].isin(common_seqID_list)]"
    ]
   },
   {
@@ -74,9 +74,9 @@
    "source": [
     "# get df from test fold\n",
     "def get_fold_dfs(test_fold, fold_split_df, inputs_df, outputs_df, evaluation_df):\n",
-    "    train_inputs_df  = inputs_df[inputs_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] == test_fold]['sequenceID'])]\n",
-    "    train_outputs_df = outputs_df[outputs_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] == test_fold]['sequenceID'])]\n",
-    "    train_eval_df    = evaluation_df[evaluation_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] == test_fold]['sequenceID'])]\n",
+    "    train_inputs_df  = inputs_df[inputs_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] != test_fold]['sequenceID'])]\n",
+    "    train_outputs_df = outputs_df[outputs_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] != test_fold]['sequenceID'])]\n",
+    "    train_eval_df    = evaluation_df[evaluation_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] != test_fold]['sequenceID'])]\n",
     "    test_inputs_df   = inputs_df[inputs_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] == test_fold]['sequenceID'])]\n",
     "    test_eval_df     = evaluation_df[evaluation_df['sequenceID'].isin(fold_split_df[fold_split_df['fold'] == test_fold]['sequenceID'])]\n",
     "    return train_inputs_df.sort_values(by='sequenceID'), train_outputs_df.sort_values(by='sequenceID'), train_eval_df, test_inputs_df, test_eval_df"
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
