--- a/MMIT.ipynb
+++ b/MMIT.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "for dataset in ['detailed', \"systematic\", \"epigenomic\"]:\n",
     "    for test_fold in range(1, 7):\n",
-    "        for n_feature in [1, 2, 4]:\n",
+    "        for n_feature in [1, 2, 4, 117]:\n",
     "            acc = get_acc_from(dataset, test_fold, n_feature)\n",
     "            # print(dataset, test_fold, n_feature, acc)\n",
     "            add_row_to_csv('acc_rate_csvs/' + dataset + '.csv', \n",
