--- a/MLP_cv.ipynb
+++ b/MLP_cv.ipynb
@@ -146,6 +146,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize(tensor):\n",
+    "    mean = torch.mean(tensor, dim=0)\n",
+    "    std = torch.std(tensor, dim=0)\n",
+    "    std_zeros = std == 0\n",
+    "    std[std_zeros] = 1\n",
+    "    normalized_tensor = (tensor - mean) / std.unsqueeze(0)\n",
+    "    return normalized_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -164,12 +179,14 @@
     "                for i in range(len(feature_engineer)):\n",
     "                    train_input_tensor[:, i] = feature_engineer[i](train_input_tensor[:, i])\n",
     "                train_input_tensor = torch.Tensor(train_input_tensor)\n",
+    "                train_input_tensor = normalize(train_input_tensor)\n",
     "\n",
     "                # test_input_tensor\n",
     "                test_input_tensor = test_inputs_df[chosen_features].to_numpy()\n",
     "                for i in range(len(feature_engineer)):\n",
     "                    test_input_tensor[:, i] = feature_engineer[i](test_input_tensor[:, i])\n",
     "                test_input_tensor = torch.Tensor(test_input_tensor)\n",
+    "                test_input_tensor = normalize(test_input_tensor)\n",
     "\n",
     "                # output tensor\n",
     "                targets_low  = torch.Tensor(train_outputs_df['min.log.lambda'].to_numpy().reshape(-1,1))\n",
