--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import math\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
@@ -157,9 +158,11 @@
     "def chose_best_architect(cv_df, test_fold, n_features):\n",
     "    cv_df_fold_features = cv_df[(cv_df['fold'] == test_fold) & (cv_df['n_features'] == n_features)]\n",
     "    cv_df_fold_features = cv_df_fold_features.sort_values(by='val_acc', ascending=False)\n",
-    "    best_n_layer = cv_df_fold_features.iloc[0]['n_layer']\n",
-    "    best_layer_size = cv_df_fold_features.iloc[0]['layer_size']\n",
-    "    return int(best_n_layer), int(best_layer_size)"
+    "    cv_df_fold_features = cv_df_fold_features[cv_df_fold_features['val_acc'] == cv_df_fold_features.iloc[0]['val_acc']]\n",
+    "    best_n_layer = math.ceil(cv_df_fold_features['n_layer'].mean())\n",
+    "    best_layer_size = math.ceil(cv_df_fold_features['layer_size'].mean())\n",
+    "    acc = cv_df_fold_features.iloc[0]['val_acc']\n",
+    "    return best_n_layer, best_layer_size, acc"
    ]
   },
   {
