update best architect

--- a/MLP_117.ipynb
+++ b/MLP_117.ipynb
@@ -8,23 +8,12 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import math\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.nn.init as init\n",
     "from utility_functions import SquaredHingeLoss, get_acc, add_row_to_csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # get common sequenceID\n",
-    "# list1 = set(pd.read_csv(\"training_data/detailed/inputs.csv\")['sequenceID'])\n",
-    "# list2 = set(pd.read_csv(\"training_data/systematic/inputs_old.csv\")['sequenceID'])\n",
-    "# common_seqID_list = list1.intersection(list2)"
    ]
   },
   {
@@ -47,13 +36,7 @@
     "fold_split_df = pd.read_csv('training_data/' + dataset + '/folds.csv')\n",
     "inputs_df     = pd.read_csv('training_data/' + dataset + '/inputs_old.csv')\n",
     "outputs_df    = pd.read_csv('training_data/' + dataset + '/outputs.csv')\n",
-    "evaluation_df = pd.read_csv('training_data/' + dataset + '/evaluation.csv')\n",
-    "\n",
-    "# # filter with common_seqID_list\n",
-    "# fold_split_df = fold_split_df[fold_split_df['sequenceID'].isin(common_seqID_list)]\n",
-    "# inputs_df     = inputs_df[inputs_df['sequenceID'].isin(common_seqID_list)]\n",
-    "# outputs_df    = outputs_df[outputs_df['sequenceID'].isin(common_seqID_list)]\n",
-    "# evaluation_df = evaluation_df[evaluation_df['sequenceID'].isin(common_seqID_list)]"
+    "evaluation_df = pd.read_csv('training_data/' + dataset + '/evaluation.csv')"
    ]
   },
   {
@@ -128,7 +111,7 @@
     "    best_loss = float('inf')\n",
     "    patience = 2000\n",
     "    wait = 0\n",
-    "    for epoch in range(100000):\n",
+    "    for epoch in range(50000):\n",
     "        loss = criterion(model(inputs_tensor), outputs_tensor)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
@@ -163,9 +146,10 @@
     "def chose_best_architect(cv_df, test_fold, n_features):\n",
     "    cv_df_fold_features = cv_df[(cv_df['fold'] == test_fold) & (cv_df['n_features'] == n_features)]\n",
     "    cv_df_fold_features = cv_df_fold_features.sort_values(by='val_acc', ascending=False)\n",
-    "    best_n_layer = cv_df_fold_features.iloc[0]['n_layer']\n",
-    "    best_layer_size = cv_df_fold_features.iloc[0]['layer_size']\n",
-    "    return int(best_n_layer), int(best_layer_size)"
+    "    cv_df_fold_features = cv_df_fold_features[cv_df_fold_features['val_acc'] == cv_df_fold_features.iloc[0]['val_acc']]\n",
+    "    best_n_layer = math.ceil(cv_df_fold_features['n_layer'].mean())\n",
+    "    best_layer_size = math.ceil(cv_df_fold_features['layer_size'].mean())\n",
+    "    return best_n_layer, best_layer_size"
    ]
   },
   {
