--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -161,8 +161,7 @@
     "    cv_df_fold_features = cv_df_fold_features[cv_df_fold_features['val_acc'] == cv_df_fold_features.iloc[0]['val_acc']]\n",
     "    best_n_layer = math.ceil(cv_df_fold_features['n_layer'].mean())\n",
     "    best_layer_size = math.ceil(cv_df_fold_features['layer_size'].mean())\n",
-    "    acc = cv_df_fold_features.iloc[0]['val_acc']\n",
-    "    return best_n_layer, best_layer_size, acc"
+    "    return best_n_layer, best_layer_size"
    ]
   },
   {
