--- a/MLP_117_cv.ipynb
+++ b/MLP_117_cv.ipynb
@@ -39,24 +39,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # get common sequenceID\n",
-    "# list1 = set(pd.read_csv(\"training_data/detailed/inputs.csv\")['sequenceID'])\n",
-    "# list2 = set(pd.read_csv(\"training_data/systematic/inputs_old.csv\")['sequenceID'])\n",
-    "# common_seqID_list = list1.intersection(list2)\n",
-    "\n",
-    "# # filter with common_seqID_list\n",
-    "# fold_split_df = fold_split_df[fold_split_df['sequenceID'].isin(common_seqID_list)]\n",
-    "# inputs_df     = inputs_df[inputs_df['sequenceID'].isin(common_seqID_list)]\n",
-    "# outputs_df    = outputs_df[outputs_df['sequenceID'].isin(common_seqID_list)]\n",
-    "# evaluation_df = evaluation_df[evaluation_df['sequenceID'].isin(common_seqID_list)]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -173,8 +155,8 @@
    "source": [
     "# main\n",
     "for test_fold in range(1, n_fold+1):\n",
-    "    for hidden_layers in [1, 2, 3]:\n",
-    "        for hidden_size in [2, 4, 8, 16, 32, 64, 128, 256]:\n",
+    "    for hidden_layers in [1, 2, 3, 4]:\n",
+    "        for hidden_size in [2, 4, 8, 16, 32, 64, 128, 256, 512]:\n",
     "            # fold dataframe\n",
     "            train_inputs_df, train_outputs_df, train_eval_df, test_inputs_df, test_eval_df = get_fold_dfs(test_fold, fold_split_df, inputs_df, outputs_df, evaluation_df)\n",
     "\n",
