--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "# dataset\n",
-    "dataset = 'epigenomic'"
+    "dataset = 'detailed'"
    ]
   },
   {
@@ -121,9 +121,9 @@
     "    optimizer = optim.Adam(model.parameters())\n",
     "    \n",
     "    best_loss = float('inf')\n",
-    "    patience = 5000\n",
+    "    patience = 2000\n",
     "    wait = 0\n",
-    "    for epoch in range(50000):\n",
+    "    for epoch in range(10000):\n",
     "        loss = criterion(model(inputs_tensor), outputs_tensor)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
@@ -161,12 +161,13 @@
     "    cv_df_fold_features = cv_df_fold_features[cv_df_fold_features['val_acc'] == cv_df_fold_features.iloc[0]['val_acc']]\n",
     "    best_n_layer = math.ceil(cv_df_fold_features['n_layer'].mean())\n",
     "    best_layer_size = math.ceil(cv_df_fold_features['layer_size'].mean())\n",
+    "    best_layer_size = 2**(int(np.log2(best_layer_size)))\n",
     "    return best_n_layer, best_layer_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
