--- a/MLP_cv.ipynb
+++ b/MLP_cv.ipynb
@@ -169,8 +169,8 @@
     "for test_fold in range(1, n_fold+1):\n",
     "    for chosen_features, feature_engineer in zip([['length'], ['length', 'variance'], ['length', 'variance', 'range_value', 'sum_diff']],\n",
     "                                                 [[loglog],   [loglog, log],          [loglog, log, log, loglog]]):\n",
-    "        for hidden_layers in [1, 2, 3]:\n",
-    "            for hidden_size in [2, 4, 8, 16, 32, 64, 128, 256]:\n",
+    "        for hidden_layers in [1, 2, 3, 4]:\n",
+    "            for hidden_size in [2, 4, 8, 16, 32, 64, 128, 256, 512]:\n",
     "                # fold dataframe\n",
     "                train_inputs_df, train_outputs_df, train_eval_df, test_inputs_df, test_eval_df = get_fold_dfs(test_fold, fold_split_df, inputs_df, outputs_df, evaluation_df)\n",
     "\n",
