--- a/MLP_117.ipynb
+++ b/MLP_117.ipynb
@@ -71,22 +71,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the MLP model\n",
     "class MLPModel(nn.Module):\n",
     "    def __init__(self, input_size, hidden_layers, hidden_size):\n",
     "        super(MLPModel, self).__init__()\n",
-    "        self.input_size = input_size\n",
+    "        self.input_size    = input_size\n",
     "        self.hidden_layers = hidden_layers\n",
-    "        self.hidden_size = hidden_size\n",
+    "        self.hidden_size   = hidden_size\n",
     "        \n",
     "        self.input_layer = nn.Linear(input_size, hidden_size)\n",
     "        self.hidden = nn.ModuleList([nn.Linear(hidden_size, hidden_size) for _ in range(hidden_layers - 1)])\n",
     "        self.output_layer = nn.Linear(hidden_size, 1)\n",
-    "        \n",
-    "        self.initialize_parameters()\n",
-    "\n",
-    "    def initialize_parameters(self):\n",
-    "        for param in self.parameters():\n",
-    "            init.normal_(param, mean=0, std=2)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = torch.relu(self.input_layer(x))\n",
@@ -111,7 +106,7 @@
     "    best_loss = float('inf')\n",
     "    patience = 2000\n",
     "    wait = 0\n",
-    "    for epoch in range(10000):\n",
+    "    for epoch in range(12000):\n",
     "        loss = criterion(model(inputs_tensor), outputs_tensor)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
