--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -83,22 +83,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the MLP model\n",
     "class MLPModel(nn.Module):\n",
     "    def __init__(self, input_size, hidden_layers, hidden_size):\n",
     "        super(MLPModel, self).__init__()\n",
-    "        self.input_size = input_size\n",
+    "        self.input_size    = input_size\n",
     "        self.hidden_layers = hidden_layers\n",
-    "        self.hidden_size = hidden_size\n",
+    "        self.hidden_size   = hidden_size\n",
     "        \n",
     "        self.input_layer = nn.Linear(input_size, hidden_size)\n",
     "        self.hidden = nn.ModuleList([nn.Linear(hidden_size, hidden_size) for _ in range(hidden_layers - 1)])\n",
     "        self.output_layer = nn.Linear(hidden_size, 1)\n",
-    "        \n",
-    "        self.initialize_parameters()\n",
-    "\n",
-    "    def initialize_parameters(self):\n",
-    "        for param in self.parameters():\n",
-    "            init.normal_(param, mean=0, std=2)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = torch.relu(self.input_layer(x))\n",
@@ -123,7 +118,7 @@
     "    best_loss = float('inf')\n",
     "    patience = 2000\n",
     "    wait = 0\n",
-    "    for epoch in range(10000):\n",
+    "    for epoch in range(12000):\n",
     "        loss = criterion(model(inputs_tensor), outputs_tensor)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
@@ -161,7 +156,7 @@
     "    cv_df_fold_features = cv_df_fold_features[cv_df_fold_features['val_acc'] == cv_df_fold_features.iloc[0]['val_acc']]\n",
     "    best_n_layer = math.ceil(cv_df_fold_features['n_layer'].mean())\n",
     "    best_layer_size = math.ceil(cv_df_fold_features['layer_size'].mean())\n",
-    "    best_layer_size = 2**(int(np.log2(best_layer_size)))\n",
+    "    # best_layer_size = 2**(int(np.log2(best_layer_size)))\n",
     "    return best_n_layer, best_layer_size"
    ]
   },
@@ -190,10 +185,6 @@
     "for test_fold in range(1, n_fold+1):\n",
     "    for chosen_features, feature_engineer in zip([['length'], ['length', 'variance'], ['length', 'variance', 'range_value', 'sum_diff']],\n",
     "                                                 [[loglog],   [loglog, log],       [loglog, log, log, loglog]]):\n",
-    "        if(identity in feature_engineer):\n",
-    "            is_engineer = 'no'\n",
-    "        else:\n",
-    "            is_engineer = 'yes'\n",
     "\n",
     "        # fold dataframe\n",
     "        train_inputs_df, train_outputs_df, train_eval_df, test_inputs_df, test_eval_df = get_fold_dfs(test_fold, fold_split_df, inputs_df, outputs_df, evaluation_df)\n",
@@ -229,7 +220,7 @@
     "        acc = get_acc(test_eval_df, lldas_df)\n",
     "        add_row_to_csv('acc_rate_csvs/' + dataset + '.csv', \n",
     "                    ['method', 'fold', 'feature engineer', 'acc'],\n",
-    "                    ['mlp.' + str(len(chosen_features)), test_fold, is_engineer, acc])"
+    "                    ['mlp.' + str(len(chosen_features)), test_fold, 'yes', acc])"
    ]
   }
  ],
