update mmit code

--- a/1.MMIT/MMIT.ipynb
+++ b/1.MMIT/MMIT.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -33,9 +33,26 @@
    },
    "outputs": [],
    "source": [
-    "for (dataset in c(\"detailed\", \"systematic\", \"epigenomic\")) {\n",
+    "data_list       <- c(\"detailed\", \"systematic\", \"epigenomic\")\n",
+    "margin_list     <- c(0, 1, 2)\n",
+    "loss_list       <- c(\"hinge\", \"square\")\n",
+    "max_depth_list  <- c(0, 1, 5, 10, 20, Inf)\n",
+    "min_sample_list <- c(0, 1, 2, 4, 8, 16, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for (dataset in data_list) {\n",
     "    for (test.fold in c(1, 2, 3, 4, 5, 6)) {\n",
-    "        for (inputset in list(c(\"length\"), c(\"length\", \"variance\"), c(\"length\", \"variance\", \"range_value\", \"sum_diff\"))) {\n",
+    "        for (inputset in list(c(\"length\"), c(\"length\", \"variance\"), c(\"length\", \"variance\", \"range_value\", \"sum_diff\"), paste0('X', 1:117))) {\n",
     "            # get dfs for all folds\n",
     "            inputs.all.df  <- read.csv(paste(\"training_data/\", dataset, \"/inputs.csv\", sep = \"\"))\n",
     "            outputs.all.df <- read.csv(paste(\"training_data/\", dataset, \"/outputs.csv\", sep = \"\"))\n",
@@ -58,10 +75,10 @@
     "\n",
     "            # cv to pick the best params in train set\n",
     "            param_grid <- NULL\n",
-    "            param_grid$margin <- 1\n",
-    "            param_grid$loss <- \"square\"\n",
-    "            param_grid$max_depth <- c(2, 4, 6, 8, 10, 12, 14, 16, 18, 20, Inf)\n",
-    "            param_grid$min_sample <- c(5, 10, 15, 20, 25, 30)\n",
+    "            param_grid$margin <- margin_list\n",
+    "            param_grid$loss <- loss_list\n",
+    "            param_grid$max_depth <- max_depth_list\n",
+    "            param_grid$min_sample <- min_sample_list\n",
     "\n",
     "            set.seed(4)\n",
     "            result <- mmit.cv(\n",
@@ -76,11 +93,11 @@
     "\n",
     "            # train the model with all train set by best params\n",
     "            tree <- mmit(feature.mat = train.inputs.df,\n",
-    "                        target.mat = train.outputs.df,\n",
-    "                        max_depth = result$best_params$max_depth,\n",
-    "                        margin = 1,\n",
-    "                        loss = \"square\",\n",
-    "                        min_sample = result$best_params$min_sample)\n",
+    "                        target.mat   = train.outputs.df,\n",
+    "                        max_depth    = result$best_params$max_depth,\n",
+    "                        margin       = result$best_params$margin,\n",
+    "                        loss         = result$best_params$loss,\n",
+    "                        min_sample   = result$best_params$min_sample)\n",
     "            \n",
     "            # produce prediction for test set\n",
     "            pred <- predict.mmit(tree, test.inputs.df)\n",
