--- a/figures/1.get_plot_mlp.ipynb
+++ b/figures/1.get_plot_mlp.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_mlp_dataset('detailed')"
+    "# print_mlp_dataset('detailed')"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_mlp_dataset('systematic')"
+    "# print_mlp_dataset('systematic')"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_mlp_dataset('epigenomic')"
+    "# print_mlp_dataset('epigenomic')"
    ]
   },
   {
@@ -86,9 +86,9 @@
     "epigenomic_df = epigenomic_df.groupby(['n_layer', 'layer_size'])['val_acc'].mean().reset_index()\n",
     "systematic_df = systematic_df.groupby(['n_layer', 'layer_size'])['val_acc'].mean().reset_index()\n",
     "\n",
-    "detailed_df['dataset'] = 'detailed'\n",
+    "detailed_df['dataset'] = ' detailed'\n",
     "epigenomic_df['dataset'] = 'epigenomic'\n",
-    "systematic_df['dataset'] = 'systematic'\n",
+    "systematic_df['dataset'] = ' systematic'\n",
     "\n",
     "final_df = pd.concat([detailed_df, epigenomic_df, systematic_df])\n",
     "final_df['layer_size'] = pd.Categorical(final_df['layer_size'], ordered=True)\n",
@@ -105,7 +105,8 @@
     "    theme_minimal() +\n",
     "    theme(figure_size=(12, 3), text=element_text(size=10))\n",
     ")\n",
-    "print(plot_combined)"
+    "\n",
+    "plot_combined.show()"
    ]
   },
   {
@@ -135,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
