--- a/figures/0.get_plot_acc.ipynb
+++ b/figures/0.get_plot_acc.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "acc_compare_df = avg_df.copy()\n",
-    "acc_compare_df = acc_compare_df[acc_compare_df['method'] != 'BIC.1']\n",
+    "# acc_compare_df = acc_compare_df[acc_compare_df['method'] != 'BIC.1']\n",
     "acc_compare_df['lower_bound'] = acc_compare_df['q25_acc']\n",
     "acc_compare_df['upper_bound'] = acc_compare_df['q75_acc']"
    ]
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "acc_compare_df['method'] = pd.Categorical(acc_compare_df['method'], \n",
-    "                                          categories=['mmit.1', 'mmit.2', 'mmit.4', 'mmit.117', 'linear.1', 'linear.2', 'linear.4','linear.117', 'mlp.1', 'mlp.2', 'mlp.4', 'mlp.117'], ordered=True)"
+    "                                          categories=['BIC.1', 'mmit.1', 'mmit.2', 'mmit.4', 'mmit.117', 'linear.1', 'linear.2', 'linear.4','linear.117', 'mlp.1', 'mlp.2', 'mlp.4', 'mlp.117'], ordered=True)"
    ]
   },
   {
