--- a/figures/0.get_plot_acc.ipynb
+++ b/figures/0.get_plot_acc.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "max_acc_per_dataset = acc_compare_df.groupby('dataset')['upper_bound'].max().reset_index()\n",
-    "max_acc_per_dataset.loc[:, 'upper_bound'] += 0.1\n",
+    "max_acc_per_dataset.loc[:, 'upper_bound'] += 0.5\n",
     "\n",
     "# Define colors for each method\n",
     "method_colors = {\n",
@@ -81,13 +81,13 @@
     "\n",
     "# Define colors for proposed and existing methods\n",
     "method_colors = {\n",
-    "    'proposed': 'red',\n",
-    "    'existing': 'black'\n",
+    "    ' proposed': 'red',\n",
+    "    'previous  ': 'black'\n",
     "}\n",
     "\n",
     "# Create a new column indicating whether the method is proposed or existing\n",
-    "acc_compare_df['category'] = 'existing'\n",
-    "acc_compare_df.loc[acc_compare_df['method'].str.startswith('mlp'), 'category'] = 'proposed'\n",
+    "acc_compare_df['category'] = 'previous  '\n",
+    "acc_compare_df.loc[acc_compare_df['method'].str.startswith('mlp'), 'category'] = ' proposed'\n",
     "\n",
     "# Plot with color adjustments\n",
     "plot_combined = (ggplot(acc_compare_df, aes(x='median_acc', y='method', color='category')) +\n",
