--- a/MLP_117.ipynb
+++ b/MLP_117.ipynb
@@ -18,6 +18,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed_value = 16\n",
+    "np.random.seed(seed_value)\n",
+    "torch.manual_seed(seed_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
