--- a/linear_L1.ipynb
+++ b/linear_L1.ipynb
@@ -20,6 +20,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "seed_value = 16\n",
+    "np.random.seed(seed_value)\n",
+    "torch.manual_seed(seed_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define the linear model\n",
     "class LinearModel(nn.Module):\n",
     "    def __init__(self, input_size):\n",
